; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_HEXNUMBER.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_HEXNUMBER.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@YY_HEXNUMBER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"<HEXNUMBER> expected, got\00", align 1
@yy_text = common dso_local global i64 0, align 8
@yy_pos = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @parse_HEXNUMBER to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_HEXNUMBER(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @YY_HEXNUMBER, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @yy_error_sym(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i64, i64* @yy_text, align 8
  %14 = inttoptr i64 %13 to i8*
  %15 = getelementptr inbounds i8, i8* %14, i64 2
  %16 = load i64, i64* @yy_pos, align 8
  %17 = load i64, i64* @yy_text, align 8
  %18 = sub nsw i64 %16, %17
  %19 = sub nsw i64 %18, 2
  %20 = call i32 @zend_ffi_val_number(i32* %12, i32 16, i8* %15, i64 %19)
  %21 = call i32 (...) @get_sym()
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @yy_error_sym(i8*, i32) #1

declare dso_local i32 @zend_ffi_val_number(i32*, i32, i8*, i64) #1

declare dso_local i32 @get_sym(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
